tests/specs/InterfaceConstruct.txt
# mod.ts
export interface I {
  new(name: string);
}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> file:///mod.ts:1:1
  | 
1 | export interface I {
  | ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> file:///mod.ts:2:3
  | 
2 |   new(name: string);
  |   ^


error[missing-return-type]: exported function is missing an explicit return type annotation
 --> file:///mod.ts:2:3
  | 
2 |   new(name: string);
  |   ^

# output.txt
Defined in file:///mod.ts:1:1

interface I

  new(name: string)


# output.json
[
  {
    "kind": "interface",
    "name": "I",
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 0,
      "byteIndex": 0
    },
    "declarationKind": "export",
    "interfaceDef": {
      "extends": [],
      "methods": [
        {
          "name": "new",
          "kind": "method",
          "location": {
            "filename": "file:///mod.ts",
            "line": 2,
            "col": 2,
            "byteIndex": 23
          },
          "optional": false,
          "params": [
            {
              "kind": "identifier",
              "name": "name",
              "optional": false,
              "tsType": {
                "repr": "string",
                "kind": "keyword",
                "keyword": "string"
              }
            }
          ],
          "returnType": null,
          "typeParams": []
        }
      ],
      "properties": [],
      "callSignatures": [],
      "indexSignatures": [],
      "typeParams": []
    }
  }
]
